# 370obd2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
data/: sample_nissan_z34_enhanced_pids.csv
design/: gui-concepts.html
docs/: SETUP.md
logbook/: TECH_LOGBOOK.md
src/: main.cpp
src/core/: EnhancedPidProfile.cpp  EnhancedPidProfile.hpp  ObdParser.cpp  ObdParser.hpp  ObdTransport.hpp  ObdTypes.cpp  ObdTypes.hpp  PidRegistry.cpp  PidRegistry.hpp  PosixElm327Transport.cpp  PosixElm327Transport.hpp  ScanSession.cpp  ScanSession.hpp  SimulatorTransport.cpp  SimulatorTransport.hpp
src/gui/: LiveDataChart.cpp  LiveDataChart.hpp  MainWindow.cpp  MainWindow.hpp  ScanWorker.cpp  ScanWorker.hpp  main_gui.cpp
tests/: obdcore_tests.cpp
